# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "metrics-keda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dynamo-llm = { workspace = true }
dynamo-runtime = { workspace = true }
metrics = { path = "../metrics" }

futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

anyhow = "1.0"
async-nats = { version = "0.38", features = ["service"] }
clap = { version = "4.5", features = ["derive", "env"] }
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.11"
